# wids-demo-agent

./: .dockerignore  .gitignore  Build_DataScience_Agent.ipynb  README.md  demo_agent.code-workspace  pyproject.toml
.cursor/rules/: python-cursorrules-prompt-file-best-practices.mdc
src/graphika/data-agent/: README.md
src/wids/agent-ui/: README.md
src/wids/agent-ui/app/: pyproject.toml
src/wids/data-agent/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/wids/data-agent/agents/: pyproject.toml
src/wids/data-agent/agents/chatbot/: graph.py  node.py  state.py
src/wids/data-agent/agents/chatbot/utils/: constants.py  model_provider.py
src/wids/data-agent/agents/simple_agent/: main.py  pyproject.toml
src/wids/data-agent/api/: .dockerignore  Dockerfile  config.py  entrypoint.sh  pyproject.toml
src/wids/data-agent/api/app/: __init__.py  config.py  main.py
src/wids/data-agent/api/app/dependencies/: db.py  llm.py
src/wids/data-agent/api/app/models/: chat.py  tortoise.py
src/wids/data-agent/api/app/routes/: __init__.py  chat.py  crud.py  summaries.py
src/wids/data-agent/api/app/utils/: constants.py
src/wids/data-agent/api/db/: Dockerfile
src/wids/data-agent/api/tests/: conftest.py  test_ping.py  test_summaries.py
