[project]
name = "demo-agent"
version = "0.1.0"
description = ""
authors = [{ name = "Michelle Rojas", email = "michelle.rojas@graphika.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
  "streamlit (>=1.43.2,<2.0.0)",
  "openai (>=1.66.3,<2.0.0)",
  "langgraph (>=0.3.11,<0.4.0)",
  "langchain-openai (>=0.3.9,<0.4.0)",
  "langchain-community (>=0.3.19,<0.4.0)",
  "fastapi (>=0.115.11,<0.116.0)",
  "uvicorn (>=0.34.0,<0.35.0)",
  "python-dotenv (>=1.0.1,<2.0.0)",
  "tomlkit (>=0.13.2,<0.14.0)",
]

[tool.poetry]
packages = [{ include = "*", from = "src" }]

[tool.poetry.group.dev.dependencies]
pyclean = "^3.1.0"
ruff = "^0.11.1"

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
