[project]
name = "wids-data-agents"
version = "0.1.0"
description = ""
authors = [{ name = "Michelle Rojas", email = "michelle.rojas@graphika.com" }]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain (>=0.3.21,<0.4.0)",
    "langchain-openai (>=0.3.9,<0.4.0)",
    "langgraph (>=0.3.18,<0.4.0)",
    "ipython (>=9.0.2,<10.0.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
]

[tool.poetry.group.dev.dependencies]
pyclean = "^3.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
