[project]
name = "wids-agent-ui"
version = "0.1.0"
description = ""
authors = [
    {name = "Michelle Rojas",email = "michelle.rojas@graphika.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "streamlit (>=1.43.2,<2.0.0)",
    "pandas[performance] (>=2.2.3,<3.0.0)",
    "altair (>=5.5.0,<6.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "langchain-openai (>=0.3.9,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
