[project]
name = "wids-simple-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Michelle Rojas",email = "michelle.rojas@graphika.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "langchain (>=0.3.21,<0.4.0)",
    "langchain-openai (>=0.3.9,<0.4.0)",
    "langgraph (>=0.3.16,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
