[project]
name = "wids-agents-api"
version = "0.1.0"
description = "API for interacting with the WIDS data agents"
authors = [{ name = "Michelle Rojas", email = "michelle.rojas@graphika.com" }]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
]

[tool.poetry.group.dev.dependencies]
pyclean = "^3.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
