[project]
name = "wids-agents-api"
version = "0.1.0"
description = "API for interacting with the WIDS data agents"
authors = [
    { name = "Michelle Rojas", email = "michelle.rojas@graphika.com" },
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "tortoise-orm (>=0.24.2,<0.25.0)",
    "aerich[toml] (>=0.8.2,<0.9.0)",
    "tomlkit (>=0.13.2,<0.14.0)",
]

[tool.poetry.group.dev.dependencies]
pyclean = "^3.1.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"

[tool.aerich]
tortoise_orm = "app.dependencies.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.pytest_env]
ENVIRONMENT = "test"

[build-system]
requires = [
    "poetry-core>=2.0.0,<3.0.0",
]
build-backend = "poetry.core.masonry.api"
