[project]
name = "wids-agents-api"
version = "0.1.0"
description = "API for interacting with the WIDS data agents"
authors = [{ name = "Michelle Rojas", email = "michelle.rojas@graphika.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "tortoise-orm[accel] (>=0.24.2,<0.25.0)",
    "aerich[toml] (>=0.8.2,<0.9.0)",
    "tomlkit (>=0.13.2,<0.14.0)",
    "openai (>=1.68.0,<2.0.0)",
]

[tool.poetry.group.dev.dependencies]
pyclean = "^3.1.0"
ruff = "^0.11.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"
asgi-lifespan = "^2.1.0"
pytest-asyncio = "^0.25.3"
pytest-cov = "^6.0.0"

[tool.aerich]
tortoise_orm = "app.dependencies.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
